Fix navbar & users/folders/show Align buttons on folders show page Fix ul closing tag in navbar Make navbar links smaller when user is logged in

--- a/app/assets/stylesheets/custom.css.sass
+++ b/app/assets/stylesheets/custom.css.sass
@@ -1,6 +1,7 @@
 @import "bootstrap-sprockets"
 @import "bootstrap"
 @import "bootstrap/theme"
+@import "font-awesome"
 
 // body, headers, buttons
 body
@@ -40,12 +41,26 @@ h2
   padding-right: 20px
   background-color: white
 
-.navbar .navbar-nav > li > a
+// .navbar .navbar-nav > li > a
+.nav-link
   text-shadow: none
   color: #b7b7b7
   font-size: 1.5em
   font-weight: bold
   padding-bottom: 11px !important
+
+.nav-link-small
+  text-shadow: none
+  color: #b7b7b7
+  font-size: 1em
+  font-weight: bold
+  padding-bottom: 11px !important
+
+.dropbox-icon
+  padding-right: 0px !important
+  
+.dropbox-words
+  padding-left: 5px !important
 
 .navbar .navbar-nav > li > a:hover
   color: #0070E0
